--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
     max-width: 360px;
   }
 
-  /* GOOGLE LOGO TEXT (colored letters) */
   .google-logo {
     font-size: 42px;
     font-weight: 600;
@@ -26,14 +25,14 @@
     margin-bottom: 30px;
   }
 
-  .google-logo span:nth-child(1) { color: #4285f4; } /* G - blue */
-  .google-logo span:nth-child(2) { color: #ea4335; } /* o - red */
-  .google-logo span:nth-child(3) { color: #fbbc05; } /* o - yellow */
-  .google-logo span:nth-child(4) { color: #4285f4; } /* g - blue */
-  .google-logo span:nth-child(5) { color: #34a853; } /* l - green */
-  .google-logo span:nth-child(6) { color: #ea4335; } /* e - red */
+  .google-logo span:nth-child(1) { color: #4285f4; } 
+  .google-logo span:nth-child(2) { color: #ea4335; } 
+  .google-logo span:nth-child(3) { color: #fbbc05; } 
+  .google-logo span:nth-child(4) { color: #4285f4; } 
+  .google-logo span:nth-child(5) { color: #34a853; } 
+  .google-logo span:nth-child(6) { color: #ea4335; } 
 
-  /* BUTTON */
+  
   .google-btn {
     display: flex;
     align-items: center;
